minor alignment fix

--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -97,7 +97,7 @@ h1 {
 }
 
 .card-body.row.no-gutters {
-	height: 80px;
+	height: 84px;
 }
 
 /* Closing style*/
